--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -42,7 +42,5 @@ jobs:
       - name: Cypress tests
         uses: cypress-io/github-action@v6
         with:
-          browser: chrome
-          start: npm start
+          start: npm test
           wait-on: 'http://localhost:3000'
-          command-prefix: 'npx cypress run'
