--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -42,5 +42,6 @@ jobs:
       - name: Cypress tests
         uses: cypress-io/github-action@v6
         with:
-          start: npm test
+          start: npm start
           wait-on: 'http://localhost:3000'
+          command-prefix: 'npx cypress run'
